QtBeef/src/Qt/qmdiarea.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QMdiArea
// --------------------------------------------------------------
[CRepr]
struct QMdiArea_Ptr: void
{
}
extension CQt
{
	[LinkName("QMdiArea_new")]
	public static extern QMdiArea_Ptr* QMdiArea_new(QWidget_Ptr* parent);
	[LinkName("QMdiArea_new2")]
	public static extern QMdiArea_Ptr* QMdiArea_new2();
	[LinkName("QMdiArea_Delete")]
	public static extern void QMdiArea_Delete(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_MetaObject")]
	public static extern QMetaObject_Ptr* QMdiArea_MetaObject(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_Qt_Metacast")]
	public static extern void* QMdiArea_Qt_Metacast(QMdiArea_Ptr* self, c_char* param1);
	[LinkName("QMdiArea_Qt_Metacall")]
	public static extern c_int QMdiArea_Qt_Metacall(QMdiArea_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QMdiArea_Tr")]
	public static extern libqt_string QMdiArea_Tr(c_char* s);
	[LinkName("QMdiArea_SizeHint")]
	public static extern QSize_Ptr QMdiArea_SizeHint(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_MinimumSizeHint")]
	public static extern QSize_Ptr QMdiArea_MinimumSizeHint(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_CurrentSubWindow")]
	public static extern QMdiSubWindow_Ptr* QMdiArea_CurrentSubWindow(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_ActiveSubWindow")]
	public static extern QMdiSubWindow_Ptr* QMdiArea_ActiveSubWindow(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SubWindowList")]
	public static extern void* QMdiArea_SubWindowList(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_AddSubWindow")]
	public static extern QMdiSubWindow_Ptr* QMdiArea_AddSubWindow(QMdiArea_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QMdiArea_RemoveSubWindow")]
	public static extern void QMdiArea_RemoveSubWindow(QMdiArea_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QMdiArea_Background")]
	public static extern QBrush_Ptr QMdiArea_Background(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetBackground")]
	public static extern void QMdiArea_SetBackground(QMdiArea_Ptr* self, QBrush_Ptr* background);
	[LinkName("QMdiArea_ActivationOrder")]
	public static extern QMdiArea_WindowOrder QMdiArea_ActivationOrder(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetActivationOrder")]
	public static extern void QMdiArea_SetActivationOrder(QMdiArea_Ptr* self, QMdiArea_WindowOrder order);
	[LinkName("QMdiArea_SetOption")]
	public static extern void QMdiArea_SetOption(QMdiArea_Ptr* self, QMdiArea_AreaOption option);
	[LinkName("QMdiArea_TestOption")]
	public static extern bool QMdiArea_TestOption(QMdiArea_Ptr* self, QMdiArea_AreaOption opton);
	[LinkName("QMdiArea_SetViewMode")]
	public static extern void QMdiArea_SetViewMode(QMdiArea_Ptr* self, QMdiArea_ViewMode mode);
	[LinkName("QMdiArea_ViewMode")]
	public static extern QMdiArea_ViewMode QMdiArea_ViewMode(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_DocumentMode")]
	public static extern bool QMdiArea_DocumentMode(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetDocumentMode")]
	public static extern void QMdiArea_SetDocumentMode(QMdiArea_Ptr* self, bool enabled);
	[LinkName("QMdiArea_SetTabsClosable")]
	public static extern void QMdiArea_SetTabsClosable(QMdiArea_Ptr* self, bool closable);
	[LinkName("QMdiArea_TabsClosable")]
	public static extern bool QMdiArea_TabsClosable(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetTabsMovable")]
	public static extern void QMdiArea_SetTabsMovable(QMdiArea_Ptr* self, bool movable);
	[LinkName("QMdiArea_TabsMovable")]
	public static extern bool QMdiArea_TabsMovable(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetTabShape")]
	public static extern void QMdiArea_SetTabShape(QMdiArea_Ptr* self, QTabWidget_TabShape shape);
	[LinkName("QMdiArea_TabShape")]
	public static extern QTabWidget_TabShape QMdiArea_TabShape(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetTabPosition")]
	public static extern void QMdiArea_SetTabPosition(QMdiArea_Ptr* self, QTabWidget_TabPosition position);
	[LinkName("QMdiArea_TabPosition")]
	public static extern QTabWidget_TabPosition QMdiArea_TabPosition(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SubWindowActivated")]
	public static extern void QMdiArea_SubWindowActivated(QMdiArea_Ptr* self, QMdiSubWindow_Ptr* param1);
	[LinkName("QMdiArea_SetActiveSubWindow")]
	public static extern void QMdiArea_SetActiveSubWindow(QMdiArea_Ptr* self, QMdiSubWindow_Ptr* window);
	[LinkName("QMdiArea_TileSubWindows")]
	public static extern void QMdiArea_TileSubWindows(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_CascadeSubWindows")]
	public static extern void QMdiArea_CascadeSubWindows(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_CloseActiveSubWindow")]
	public static extern void QMdiArea_CloseActiveSubWindow(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_CloseAllSubWindows")]
	public static extern void QMdiArea_CloseAllSubWindows(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_ActivateNextSubWindow")]
	public static extern void QMdiArea_ActivateNextSubWindow(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_ActivatePreviousSubWindow")]
	public static extern void QMdiArea_ActivatePreviousSubWindow(QMdiArea_Ptr* self);
	[LinkName("QMdiArea_SetupViewport")]
	public static extern void QMdiArea_SetupViewport(QMdiArea_Ptr* self, QWidget_Ptr* viewport);
	[LinkName("QMdiArea_Event")]
	public static extern bool QMdiArea_Event(QMdiArea_Ptr* self, QEvent_Ptr* event);
	[LinkName("QMdiArea_EventFilter")]
	public static extern bool QMdiArea_EventFilter(QMdiArea_Ptr* self, QObject_Ptr* object, QEvent_Ptr* event);
	[LinkName("QMdiArea_PaintEvent")]
	public static extern void QMdiArea_PaintEvent(QMdiArea_Ptr* self, QPaintEvent_Ptr* paintEvent);
	[LinkName("QMdiArea_ChildEvent")]
	public static extern void QMdiArea_ChildEvent(QMdiArea_Ptr* self, QChildEvent_Ptr* childEvent);
	[LinkName("QMdiArea_ResizeEvent")]
	public static extern void QMdiArea_ResizeEvent(QMdiArea_Ptr* self, QResizeEvent_Ptr* resizeEvent);
	[LinkName("QMdiArea_TimerEvent")]
	public static extern void QMdiArea_TimerEvent(QMdiArea_Ptr* self, QTimerEvent_Ptr* timerEvent);
	[LinkName("QMdiArea_ShowEvent")]
	public static extern void QMdiArea_ShowEvent(QMdiArea_Ptr* self, QShowEvent_Ptr* showEvent);
	[LinkName("QMdiArea_ViewportEvent")]
	public static extern bool QMdiArea_ViewportEvent(QMdiArea_Ptr* self, QEvent_Ptr* event);
	[LinkName("QMdiArea_ScrollContentsBy")]
	public static extern void QMdiArea_ScrollContentsBy(QMdiArea_Ptr* self, c_int dx, c_int dy);
	[LinkName("QMdiArea_Tr2")]
	public static extern libqt_string QMdiArea_Tr2(c_char* s, c_char* c);
	[LinkName("QMdiArea_Tr3")]
	public static extern libqt_string QMdiArea_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QMdiArea_SubWindowList1")]
	public static extern void* QMdiArea_SubWindowList1(QMdiArea_Ptr* self, QMdiArea_WindowOrder order);
	[LinkName("QMdiArea_AddSubWindow2")]
	public static extern QMdiSubWindow_Ptr* QMdiArea_AddSubWindow2(QMdiArea_Ptr* self, QWidget_Ptr* widget, void* flags);
	[LinkName("QMdiArea_SetOption2")]
	public static extern void QMdiArea_SetOption2(QMdiArea_Ptr* self, QMdiArea_AreaOption option, bool on);
}
